--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
   <div class="hero-content">
     <h1>Safe Flights,<br>Affordable Prices</h1>
-    <a href="flights.html"><button class="btn btn-primary">Book Now</button></a>
+    <a href="index.html#book"><button class="btn btn-primary">Book Now</button></a>
   </div>
 </div>
 
